[gd_scene load_steps=13 format=3 uid="uid://bti47vm74ld76"]

[ext_resource type="Script" path="res://Scenes/Leaderboard/leaderboard_item.gd" id="1_x5h14"]
[ext_resource type="Texture2D" path="res://Assets/leaderboard/top_item_bg.tres" id="2_x28uf"]
[ext_resource type="Texture2D" path="res://Assets/leaderboard/common_item_bg.tres" id="3_4ywx0"]
[ext_resource type="FontFile" uid="uid://cjofpiuwfbr7i" path="res://Assets/fonts/Lilita One Regular.ttf" id="4_h1kek"]
[ext_resource type="Texture2D" path="res://Assets/leaderboard/current_item_bg.tres" id="4_mlekt"]
[ext_resource type="Texture2D" path="res://Assets/leaderboard/gold_medal.tres" id="5_onap5"]
[ext_resource type="Texture2D" path="res://Assets/leaderboard/silver_medal.tres" id="6_iqkg4"]
[ext_resource type="Texture2D" path="res://Assets/leaderboard/bronze_medal.tres" id="7_onap5"]
[ext_resource type="Texture2D" path="res://Assets/leaderboard/score_bg.tres" id="9_onap5"]

[sub_resource type="LabelSettings" id="LabelSettings_2unq6"]
font = ExtResource("4_h1kek")
font_size = 42
font_color = Color(0.486275, 0.211765, 0.00784314, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xcg36"]
font = ExtResource("4_h1kek")
font_size = 28
font_color = Color(0.486275, 0.211765, 0.00784314, 1)

[sub_resource type="LabelSettings" id="LabelSettings_onap5"]
resource_local_to_scene = true
font = ExtResource("4_h1kek")
font_size = 54
font_color = Color(0.486275, 0.211765, 0.00784314, 1)

[node name="LeaderboardItem" type="Control"]
custom_minimum_size = Vector2(585, 70)
layout_mode = 3
anchor_right = 0.812
anchor_bottom = 0.068
offset_right = 0.360046
offset_bottom = -17.04
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5h14")
best_bg = ExtResource("2_x28uf")
common_bg = ExtResource("3_4ywx0")
current_bg = ExtResource("4_mlekt")
gold_medal = ExtResource("5_onap5")
silver_medal = ExtResource("6_iqkg4")
bronze_medal = ExtResource("7_onap5")

[node name="WinnerBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.5
offset_top = -36.0
offset_right = 284.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_x28uf")

[node name="PlayerNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 83.0
offset_top = -27.0
offset_right = 421.0
offset_bottom = 22.0
grow_vertical = 2
text = "Маргарита"
label_settings = SubResource("LabelSettings_2unq6")
clip_text = true

[node name="ScoreBG" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 438.0
offset_top = 18.0
offset_right = 557.0
offset_bottom = 51.0
texture = ExtResource("9_onap5")

[node name="ScoreLabel" type="Label" parent="ScoreBG"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -14.5
offset_right = 52.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
text = "12222"
label_settings = SubResource("LabelSettings_xcg36")
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = -22.0
offset_right = 59.0
offset_bottom = 18.0
grow_vertical = 2

[node name="Medal" type="TextureRect" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -36.0
offset_right = 25.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)

[node name="RankLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -31.0
offset_right = 25.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
label_settings = SubResource("LabelSettings_onap5")
horizontal_alignment = 1
vertical_alignment = 1
